Добавит стили для модального окна

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,7 @@
 @import "../css/shows.css";
 @import "../css/now-playing.css";
 @import "../css/details-card.css";
+@import "../css/modal.css";
 
 :root {
   /* Primary colors*/
